[package]
name = "pdf-similarity-detector"
version = "1.0.0"
description = "Local PDF similarity detector"
authors = ["Codex"]
edition = "2021"
default-run = "pdf-similarity-detector"

[lib]
name = "pdf_similarity_detector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "analyze_demo"
path = "src/bin/analyze_demo.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
lopdf = "0.40.0"
once_cell = "1.20.2"
parking_lot = "0.12.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tauri = { version = "2.8.4", features = [] }
tauri-plugin-dialog = "2.4.0"
thiserror = "1.0.64"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
